{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 14,
  "lineage": "5660a7a7-81b7-9c5b-3e8d-e498a059b643",
  "resources": [
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.297-07:00",
            "deny": [],
            "description": "Allow HTTP to machines with the 'http-server' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-http",
            "name": "assignment-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.314-07:00",
            "deny": [],
            "description": "Allow HTTPS to machines with the 'https' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-https",
            "name": "assignment-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.299-07:00",
            "deny": [],
            "description": "Allow SSH to machines with the 'ssh' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-ssh",
            "name": "assignment-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/assignment-ingress-tag-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "allow-all-admin-users",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:23.014-07:00",
            "deny": [],
            "description": "Allow all traffic from admin-users",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/allow-all-admin-users",
            "name": "allow-all-admin-users",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/allow-all-admin-users",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "admin-users"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-ssh-from-bastion",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.315-07:00",
            "deny": [],
            "description": "Allow ssh from bastion host to web and app on internal ip's",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/allow-ssh-from-bastion",
            "name": "allow-ssh-from-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/allow-ssh-from-bastion",
            "source_ranges": [
              "10.10.10.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app-tier",
              "web-tier"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-web",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.317-07:00",
            "deny": [],
            "description": "Allow traffic on web tier from internet on port 443",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/allow-web",
            "name": "allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-tier"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-web-to-app",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-26T22:59:15.319-07:00",
            "deny": [],
            "description": "Allow web to app connection on port 80",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/allow-web-to-app",
            "name": "allow-web-to-app",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/allow-web-to-app",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "web-tier"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "app-tier"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "deny-app-to-web",
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2020-07-26T22:59:15.310-07:00",
            "deny": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "Deny app to web connection on port 443",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-5398fd04/global/firewalls/deny-app-to-web",
            "name": "deny-app-to-web",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "priority": 1000,
            "project": "playground-s-11-5398fd04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/firewalls/deny-app-to-web",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "app-tier"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "web-tier"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/playground-s-11-5398fd04/global/networks/assignment",
            "name": "assignment",
            "project": "playground-s-11-5398fd04",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-west1/assignment-backend-03",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-26T22:59:15.421-07:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-backend-03",
            "ip_cidr_range": "10.10.30.0/24",
            "name": "assignment-backend-03",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "private_ip_google_access": false,
            "project": "playground-s-11-5398fd04",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-backend-03"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/assignment-bastion-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-26T22:59:15.457-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-bastion-01",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "assignment-bastion-01",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "private_ip_google_access": false,
            "project": "playground-s-11-5398fd04",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-bastion-01"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/assignment-frontend-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-26T22:59:15.477-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-frontend-02",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "assignment-frontend-02",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/global/networks/assignment",
            "private_ip_google_access": false,
            "project": "playground-s-11-5398fd04",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-5398fd04/regions/us-west1/subnetworks/assignment-frontend-02"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}